[package]
name = "ongeki-data"
version = "0.2.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2018"

[[bin]]
name = "emit-skk-dictionary"
path = "./src/bin/emit-skk-dictionary.rs"

[[bin]]
name = "emit-atok-dictionary"
path = "./src/bin/emit-atok-dictionary.rs"

[[bin]]
name = "emit-msime-dictionary"
path = "./src/bin/emit-msime-dictionary.rs"

[lib]
path = "./src/lib.rs"

# Dependencies

[dependencies.failure]
version = "0.1.5"

[dependencies.log]
version = "0.4.6"

[dependencies.env_logger]
version = "0.6.1"

[dependencies.clap]
version = "2.32.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.4"

[dependencies.chrono]
version = "0.4.6"
