[package]
name = "ongeki-data"
version = "0.2.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2018"

[[bin]]
name = "emit-dictionary"
path = "./src/bin/emit-dictionary.rs"

[lib]
path = "./src/lib.rs"

# Dependencies

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.7"

[dependencies.clap]
version = "2.33"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5"

[dependencies.chrono]
version = "0.4"
