[package]
name = "ongeki-data"
version = "0.2.1"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2021"

[[bin]]
name = "emit-dictionary"
path = "./src/bin/emit-dictionary.rs"

[lib]
path = "./src/lib.rs"

# Dependencies

[dependencies.log]
version = "0.4.14"

[dependencies.env_logger]
version = "0.9.0"

[dependencies.structopt]
version = "0.3.25"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.toml]
version = "0.5.8"

[dependencies.chrono]
version = "0.4.19"
